--- a/overlays/dev/kustomization.yaml
+++ b/overlays/dev/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../../base
-namePrefix: andrelabreche-
+namePrefix: aaaaaaaaaaaaH-
 images:
 - name: gitopsworkshop/my-app
-  newTag: v2
+  newTag: v1
